<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="ViewModel"
            type="com.example.zvent.results.ResultsViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultsFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Resultado_text"
            android:textSize="@dimen/nombre_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/invitados_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/invitados_text(ViewModel.resultsCount)}"
            android:textSize="@dimen/subtitulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.073" />

        <TextView
            android:id="@+id/registrados_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/Registrados_edit(ViewModel.asistResult)}"
            android:textSize="@dimen/subtitulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invitados_edit"
            app:layout_constraintVertical_bias="0.089" />

        <Button
            android:id="@+id/reiniciar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reiniciar_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrados_edit"
            app:layout_constraintVertical_bias="0.561" />

        <Button
            android:id="@+id/ver_Invitados_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verInvitados_text"
            android:textSize="18sp"
            android:onClick="viewAnswers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reiniciar_button"
            app:layout_constraintVertical_bias="0.481" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
